hard-gists/2786290/run.log
=== Docker Run Log for 2786290 ===
Started at: Mi 29. Okt 13:14:56 CET 2025

[2025-10-29 13:14:56] START: Running container for 2786290
[2025-10-29 13:14:56] SUCCESS: Container ede0f37b6555e1c00386f84f6985e5e470ae9263ae01d11b1accd6d5c301c817 started for 2786290
=== Container logs for 2786290 ===
  File "/snippet.py", line 42
    except sae.storage.ObjectNotExistsError, e:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2786290 ===
[2025-10-29 13:14:58] INFO: Container ede0f37b6555e1c00386f84f6985e5e470ae9263ae01d11b1accd6d5c301c817 has stopped
